# BudgetBook

./: .gitignore  Cargo.toml  DockerfilePytest  LICENSE.md  Linux_DockerRunner  README.md  Windows_DockerRunner  build.sh  dev_build_rust.ps1  docker-compose-pre-built.yml  docker-compose.yml  main.py  pyproject.toml  pyproject.toml__  requirements.txt  test.py
.github/workflows/: build-rust-mac.yml  build-rust-ubuntu.yml  build-rust-windows.yml  build-rust.yml  docker-publish.yml  docker-pytest.yml  pytest.yml  python-package.yml
backend/: .gitignore  Windows_DockerRunner  main.py  test.py
backend/budget_book/: __init__.py  first_boot.py  path_manager.py  rust_encryptor.py
backend/budget_book/errors/: __init__.py  errors.py
backend/budget_book/logic/: controller.py  user.py
backend/docker/: Dockerfile  DockerfilePrebuiltWheel  DockerfilePytest  DockerfilePytestNoRust
backend/docs/: file_types.md
backend/src/: encryptor.rs  secret.rs
backend/test/: test_rust_encryptor.py
budget_book/: __init__.py  path_manager.py  rust_encryptor.py
budget_book/errors/: __init__.py  errors.py
budget_book/logic/: controller.py  user.py
budget_book/server/: cert_manager.py  manager.py  server_env.py
docker/: Dockerfile  DockerfilePytest  DockerfilePytestNoRust
permanent_storage/test/: up.hb.template
prebuilt/wheel/: mfence-0.1.1-cp313-cp313-manylinux_2_34_aarch64.whl  mfence-0.1.1-cp313-cp313-manylinux_2_34_x86_64.whl
resources/: look_up.json
src/: encryptor.rs  lib.rs  secret.rs
test/: test_rust_encryptor.py
test/server/: cert_manager.py
(+50 files in other folders)
