[package]
name = "mfence"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.25.1", features = ["extension-module"]}
zeroize = "1.8.1"
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["rand_core"] }
p256 = "0.13.2"
rand = "0.9.2"
rand_core = "0.9.3"
sha2 = "0.10"
base64 = "0.22.1"
hex = "0.4"
argon2-kdf = "1.6.2"
memsec = "0.7.0"

[package.metadata.maturin]
name = "mfence"
